--- a/view/move_purchase_tree.xml
+++ b/view/move_purchase_tree.xml
@@ -3,7 +3,7 @@
 The COPYRIGHT file at the top level of this repository contains the full
 copyright notices and license terms. -->
 <data>
-    <xpath expr="/tree/field[@name='uom']" position="before">
+    <xpath expr="/tree/field[@name='uom']" position="after">
         <field name="weight"/>
         <field name="weight_uom"/>
     </xpath>
